ADD: css file links in html + navbar container with the logo anchor + style (only color and font)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/responsive.css">
   <!-- 
   add font 'montserrat - helvetica neue'
   -->
@@ -11,10 +16,13 @@
 <body>
   <header class="main-header">
     <nav class="navbar">
-      <div class="logo--title">
+      <div class="logo--container">
         <!-- 
-        logo / font - 'Nerko one'
+        logo / font --'Nerko one'
         -->
+        <a class="logo-title" href="">
+          Giallo Booleano
+        </a>
       </div>
     </nav>
   </header>
