ADD: style for hero card - padding and margin rules + set a base px width for containers

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- 
         logo / font --'Nerko one'
         -->
-        <a class="logo-title" href="">
+        <a class="logo" href="">
           Giallo Booleano
         </a>
       </div>
