ADD: css for icons and banner

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     recipe card section
     -->
     <section class="hero">
-      <div class="container w-80">
+      <div class="container">
         <div class="row w-100">
           <div class="col w-100">
             <!-- 
@@ -94,22 +94,19 @@
         row2 with social links
         -->
         <div class="row w-100 socials">
-          <div class="col social-icon">
+          <div class="col w-20 social-icon">
             <i class="fa-brands fa-facebook"></i>
           </div>
-          <div class="col social-icon">
+          <div class="col w-20 social-icon">
             <i class="fa-brands fa-twitter"></i>
           </div>
-          <div class="col social-icon">
+          <div class="col w-20 social-icon">
             <i class="fa-brands fa-instagram"></i>
           </div>
-          <div class="col social-icon">
-
-          </div>
-          <div class="col social-icon">
+          <div class="col w-20 social-icon">
             <i class="fa-brands fa-pinterest"></i>
           </div>
-          <div class="col social-icon">
+          <div class="col w-20 social-icon">
             <i class="fa-brands fa-youtube"></i>
           </div>
         </div>
