FIX: container width and embed the icons and the banner in two separate containers

--- a/index.html
+++ b/index.html
@@ -89,40 +89,56 @@
             </div>
           </div> 
         </div>
-
+      </div>
         <!-- 
         row2 with social links
         -->
-        <div class="row w-100 socials">
-          <div class="col w-20 social-icon">
-            <i class="fa-brands fa-facebook"></i>
-          </div>
-          <div class="col w-20 social-icon">
-            <i class="fa-brands fa-twitter"></i>
-          </div>
-          <div class="col w-20 social-icon">
-            <i class="fa-brands fa-instagram"></i>
-          </div>
-          <div class="col w-20 social-icon">
-            <i class="fa-brands fa-pinterest"></i>
-          </div>
-          <div class="col w-20 social-icon">
-            <i class="fa-brands fa-youtube"></i>
-          </div>
+        <div class="container">
+          <div class="row w-100 socials">
+            <div class="col w-20 icon-wrap">
+              <a href="" class="social-icon">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+            </div>
+  
+            <div class="col w-20 icon-wrap">
+              <a href="" class="social-icon">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+            </div>
+  
+            <div class="col w-20 icon-wrap">
+              <a href="" class="social-icon">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
+  
+            <div class="col w-20 icon-wrap">
+              <a href="" class="social-icon">
+                <i class="fa-brands fa-pinterest"></i>
+              </a>
+            </div>
+  
+            <div class="col w-20 icon-wrap">
+              <a href="" class="social-icon">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>  
         </div>
-
+        
         <!-- 
         row3 banner
         -->
-        <div class="row w-100">
-          <div class="col-100 banner">
-            <a href="" class="learn-with-us">
-              <img src="./img/banner.png" alt="impara a cucinare con noi">
-            </a>
+        <div class="container">
+          <div class="row w-100">
+            <div class="col-100 banner">
+              <a href="" class="learn-with-us">
+                <img src="./img/banner.png" alt="impara a cucinare con noi">
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-
     </section>
 
     <!-- presentation of the meal -->
