ADD: responsive for first section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   dolci e desserts
                 </p>
                 <h1 class="main-title">
-                  Tiramisu' (Dolce Tradizionale)
+                  Tiramisu' <span class="additional-info">(Dolce Tradizionale)</span>
                 </h1>
               </div>
               <div class="card-body">
@@ -143,7 +143,11 @@
 
     <!-- presentation of the meal -->
     <section class="recipe-presentation">
-      
+      <div class="container">
+        <div class="row w-100">
+
+        </div>
+      </div>
     </section>
   </main>
 
