--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </div>
               <div class="card-body">
                 <a href="" class="embed-video">
-                  <img src="./img/tiramisu.jpg" alt="youtube video">
+                  <img src="./img/image (10).png" alt="youtube video">
                 </a>
                 
                 <div class="recipe-details">
@@ -145,7 +145,9 @@
     <section class="recipe-presentation">
       <div class="container">
         <div class="row w-100">
-
+          <h2 class="recipe-story title">Presentation</h2>
+          <p class="story">
+            <img src="./img/tiramisu.jpg" alt="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, id? Possimus, tenetur, nobis rem odit excepturi sit non ut ullam eius laboriosam accusantium. Tenetur quidem possimus labore est animi, autem inventore quae assumenda maiores molestias fugiat placeat cumque reprehenderit dicta? Necessitatibus possimus enim odit provident eius. Nulla tempore tempora animi amet reprehenderit dolore delectus quibusdam explicabo eum. Eaque nesciunt ex, quaerat aperiam dolores molestiae nulla, impedit cumque illum recusandae eum blanditiis! Mollitia esse delectus nisi, eligendi animi a, accusamus quis expedita culpa nobis inventore nesciunt veniam? Eligendi iste non ipsa earum? Maxime veniam commodi ratione consequatur dolorem excepturi, quasi eius?</p>
         </div>
       </div>
     </section>
